[gd_scene load_steps=31 format=3 uid="uid://c2thyvk1fh353"]

[ext_resource type="Script" path="res://Scripts/enemy_npc.gd" id="1_lt23b"]
[ext_resource type="Texture2D" uid="uid://cipp4tvdknrpy" path="res://Assets/Characters(100x100)/Soldier/Soldier with shadows/Soldier-Attack01.png" id="2_ialov"]
[ext_resource type="Texture2D" uid="uid://cbqqnbsj5qfg2" path="res://Assets/Characters(100x100)/Soldier/Soldier with shadows/Soldier-Idle.png" id="3_eu1la"]
[ext_resource type="Texture2D" uid="uid://bfsejr56w7l1n" path="res://Assets/Characters(100x100)/Soldier/Soldier with shadows/Soldier-Walk.png" id="4_8n2cs"]
[ext_resource type="PackedScene" uid="uid://cbcf2h05dochh" path="res://markIncompleteScenes/hurtbox.tscn" id="5_hki62"]

[sub_resource type="CircleShape2D" id="CircleShape2D_lqlrt"]

[sub_resource type="AtlasTexture" id="AtlasTexture_uo574"]
atlas = ExtResource("2_ialov")
region = Rect2(0, 0, 100, 100)

[sub_resource type="AtlasTexture" id="AtlasTexture_ykabp"]
atlas = ExtResource("2_ialov")
region = Rect2(100, 0, 100, 100)

[sub_resource type="AtlasTexture" id="AtlasTexture_eqn3i"]
atlas = ExtResource("2_ialov")
region = Rect2(200, 0, 100, 100)

[sub_resource type="AtlasTexture" id="AtlasTexture_w0sqg"]
atlas = ExtResource("2_ialov")
region = Rect2(300, 0, 100, 100)

[sub_resource type="AtlasTexture" id="AtlasTexture_24yh6"]
atlas = ExtResource("2_ialov")
region = Rect2(400, 0, 100, 100)

[sub_resource type="AtlasTexture" id="AtlasTexture_3aeok"]
atlas = ExtResource("2_ialov")
region = Rect2(500, 0, 100, 100)

[sub_resource type="AtlasTexture" id="AtlasTexture_g3ykc"]
atlas = ExtResource("3_eu1la")
region = Rect2(0, 0, 100, 100)

[sub_resource type="AtlasTexture" id="AtlasTexture_j3ise"]
atlas = ExtResource("3_eu1la")
region = Rect2(100, 0, 100, 100)

[sub_resource type="AtlasTexture" id="AtlasTexture_1nbeq"]
atlas = ExtResource("3_eu1la")
region = Rect2(200, 0, 100, 100)

[sub_resource type="AtlasTexture" id="AtlasTexture_8qptg"]
atlas = ExtResource("3_eu1la")
region = Rect2(300, 0, 100, 100)

[sub_resource type="AtlasTexture" id="AtlasTexture_xqcq3"]
atlas = ExtResource("3_eu1la")
region = Rect2(400, 0, 100, 100)

[sub_resource type="AtlasTexture" id="AtlasTexture_6xl04"]
atlas = ExtResource("3_eu1la")
region = Rect2(500, 0, 100, 100)

[sub_resource type="AtlasTexture" id="AtlasTexture_1qskn"]
atlas = ExtResource("4_8n2cs")
region = Rect2(0, 0, 100, 100)

[sub_resource type="AtlasTexture" id="AtlasTexture_0yln1"]
atlas = ExtResource("4_8n2cs")
region = Rect2(100, 0, 100, 100)

[sub_resource type="AtlasTexture" id="AtlasTexture_hoh42"]
atlas = ExtResource("4_8n2cs")
region = Rect2(200, 0, 100, 100)

[sub_resource type="AtlasTexture" id="AtlasTexture_flf2a"]
atlas = ExtResource("4_8n2cs")
region = Rect2(300, 0, 100, 100)

[sub_resource type="AtlasTexture" id="AtlasTexture_jujvl"]
atlas = ExtResource("4_8n2cs")
region = Rect2(400, 0, 100, 100)

[sub_resource type="AtlasTexture" id="AtlasTexture_6mvdu"]
atlas = ExtResource("4_8n2cs")
region = Rect2(500, 0, 100, 100)

[sub_resource type="AtlasTexture" id="AtlasTexture_yy00s"]
atlas = ExtResource("4_8n2cs")
region = Rect2(600, 0, 100, 100)

[sub_resource type="AtlasTexture" id="AtlasTexture_mmj4m"]
atlas = ExtResource("4_8n2cs")
region = Rect2(700, 0, 100, 100)

[sub_resource type="SpriteFrames" id="SpriteFrames_y448l"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_uo574")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_ykabp")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_eqn3i")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_w0sqg")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_24yh6")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_3aeok")
}],
"loop": true,
"name": &"attack",
"speed": 6.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_g3ykc")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_j3ise")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_1nbeq")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_8qptg")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_xqcq3")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_6xl04")
}],
"loop": true,
"name": &"idle",
"speed": 10.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_1qskn")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_0yln1")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_hoh42")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_flf2a")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_jujvl")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_6mvdu")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_yy00s")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_mmj4m")
}],
"loop": true,
"name": &"walk",
"speed": 8.0
}]

[sub_resource type="Animation" id="Animation_65qus"]
resource_name = "attack"

[sub_resource type="AnimationLibrary" id="AnimationLibrary_f85km"]
_data = {
"attack": SubResource("Animation_65qus")
}

[sub_resource type="CapsuleShape2D" id="CapsuleShape2D_d0ega"]
radius = 4.0
height = 40.0

[node name="mugger" type="CharacterBody2D"]
script = ExtResource("1_lt23b")

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
shape = SubResource("CircleShape2D_lqlrt")

[node name="AnimatedSprite2D" type="AnimatedSprite2D" parent="."]
sprite_frames = SubResource("SpriteFrames_y448l")
animation = &"attack"
frame = 4
frame_progress = 0.92948

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
libraries = {
"": SubResource("AnimationLibrary_f85km")
}

[node name="Hurtbox" parent="." instance=ExtResource("5_hki62")]

[node name="hurtbox" type="CollisionShape2D" parent="Hurtbox"]
position = Vector2(0, 5)
rotation = -1.5708
shape = SubResource("CapsuleShape2D_d0ega")

[node name="Timer" type="Timer" parent="."]
wait_time = 0.6
one_shot = true

[node name="lagTimer" type="Timer" parent="."]

[connection signal="body_entered" from="Hurtbox" to="." method="_on_hurtbox_body_entered"]
[connection signal="body_exited" from="Hurtbox" to="." method="_on_hurtbox_body_exited"]
[connection signal="body_exited" from="Hurtbox" to="Hurtbox" method="_on_body_exited"]
[connection signal="timeout" from="Timer" to="." method="_on_timer_timeout"]
[connection signal="timeout" from="Timer" to="Hurtbox" method="_on_timer_timeout"]
